go swagger continue and create client
