# product-api/swagger.yaml
@@ -2,6 +2,12 @@ basePath: /
 consumes:
 - application/json
 definitions:
+  H:
+    additionalProperties:
+      type: object
+    description: H is a shortcut for map[string]interface{}
+    type: object
+    x-go-package: github.com/gin-gonic/gin
   Product:
     description: Product defines the structure of an API product
     properties:
@@ -30,6 +36,26 @@ info:
   version: 1.0.0
 paths:
   /products:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: query
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
     get:
       description: Return a list of products from the database
       operationId: listProducts
@@ -71,13 +97,6 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/Product'
-      - description: The id of the product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContentResponse'
@@ -90,19 +109,33 @@ paths:
   /products/{id}:
     get:
       description: Return a list of products from the database
-      operationId: listSingle
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
         "404":
           $ref: '#/responses/errorResponse'
         "500":
-          $ref: '#/responses/internalErrorResponse'
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
 - application/json
 responses:
+  errorResponse:
+    description: Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/H'
+  errorValidation:
+    description: Validation errors defined as an array of strings
   noContentResponse:
     description: No content is returned by this API endpoint
   productResponse:
